# StdPlusPlus

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
include/: ACStdLib.hpp  ACStdLibCPUOpt.hpp  ACStdLibTest.hpp  CMakeLists.txt  Std++.hpp  Std++CPUOpt.hpp  Std++Test.hpp  StdXX.hpp  StdXXCommandLine.hpp  StdXXCore.hpp  StdXXErrorHandling.hpp  StdXXEventHandling.hpp  StdXXFileSystem.hpp  StdXXMIDI.hpp  StdXXMath.hpp  StdXXMultimedia.hpp  StdXXStreams.hpp  StdXXTest.hpp  StdXXUI.hpp
include/ACStdLib/: CFunction.h  CIniFile.h  CMakeLists.txt  Char.hpp  Color.hpp  ConfigurationFile.hpp  Debug.h  Definitions.h  Deleters.hpp  Float.hpp  Function.hpp  Integer.h  InternalCompilerFlags.h  Mathematics.h  Memory.h  Natural.hpp  Tuple.hpp  Type.hpp  Variant.hpp  __InitAndShutdown.h
include/Std++/: CMakeLists.txt  Char.hpp  ChecksumFunction.hpp  Color.hpp  ConfigurationFile.hpp  Constants.hpp  Debug.h  Debug.hpp  Definitions.h  Deleters.hpp  EnumeratorIterator.hpp  Float.hpp  Function.hpp  Hasher.hpp  Integer.hpp  InternalCompilerFlags.h  Mathematics.h  Mathematics.hpp  Memory.h  Memory.hpp  Natural.hpp  OSHandle.hpp  Optional.hpp  ShutdownManager.hpp  Signed.hpp  Tuple.hpp  Type.hpp  Unsigned.hpp  Utility.hpp  Variant.hpp  __Globaldependencies.h  __InitAndShutdown.h
include/Std++CPUOpt/: CMakeLists.txt
src/: CMakeLists.txt  ConfigurationFile.cpp  Debug.cpp  Mathematics.cpp  Memory.cpp  MemoryOperators.cpp  __InitAndShutdown.cpp
src/Buffers/: CMakeLists.txt  DynamicByteBuffer.cpp  FixedSizeBuffer.cpp  RingBuffer.cpp
src/CodeAnalysis/: CMakeLists.txt  Decoder.cpp  Program.cpp
src/CommandLine/: Argument.cpp  CMakeLists.txt  Group.cpp  Option.cpp  OptionWithArgument.cpp  Parser.cpp  StringArgument.cpp  SubCommandArgument.cpp
src/CommonFileFormats/: CMakeLists.txt  ConfigurationFile.cpp  JSON.cpp  YAML.cpp
src/Compression/: CMakeLists.txt  Compressor.cpp  Decompressor.cpp  DictionaryDecompressor.cpp  HuffmanDecoder.cpp  IndexedSlidingDictionary.cpp  RedundancyBasedCompressor.cpp  SlidingDictionary.cpp  SlidingDictionary.hpp
src/Compute/: Buffer.cpp  CommandQueue.cpp  Device.cpp  DeviceContext.cpp  Kernel.cpp  Program.cpp
src/Containers/: CMakeLists.txt  FIFOBuffer.cpp
src/Cryptography/: BlockCipher.cpp  BlockDecipher.cpp  BlockDecipherStream.cpp  CBCCipher.cpp  CBCDecipher.cpp  CMakeLists.txt  CTRCipher.cpp  CTRDecipher.cpp  CheckedHashingInputStream.cpp  Cipher.cpp  ECBCipher.cpp  ECBDecipher.cpp  HKDF.cpp  HMAC.cpp  HashFunction.cpp  HashingInputStream.cpp  HashingOutputStream.cpp  PBKDF2.cpp  scrypt.cpp
src/Debugging/: CMakeLists.txt  DebugOutputStreams.cpp  FunctionHook.cpp
src/Devices/: AudioDevice.cpp  CMakeLists.txt  ComputeDevice.cpp  DeviceEnumerator.cpp
src/Eventhandling/: EventQueue.cpp  StandardEventQueue.cpp
src/FileFormats/: CMakeLists.txt  FormatRegistry.cpp
src/FileSystem/: BufferedMetadataFileSystem.cpp  CMakeLists.txt  ContainerDirectory.cpp  ContainerFile.cpp  ContainerFileSystem.cpp  Directory.cpp  DirectoryWalker.cpp  EmbeddedFileInputStream.cpp  File.cpp  FileSystemsManager.cpp  Format.cpp  Link.cpp  MemoryDirectory.cpp  MemoryFile.cpp  POSIXPermissions.cpp  Path.cpp  ReadableFileSystem.cpp  URL.cpp  UnixPermissions.cpp  WritableContainerDirectory.cpp  WritableFileSystem.cpp
src/Filesystem/: BufferedMetadataFileSystem.cpp  CMakeLists.txt  ContainerDirectory.cpp  ContainerFile.cpp  ContainerFileInputStream.cpp  ContainerFileSystem.cpp  Directory.cpp  DirectoryWalker.cpp  EmbeddedFileInputStream.cpp  File.cpp  FileSystem.cpp  FileSystemFormat.cpp  Link.cpp  MemoryDirectory.cpp  MemoryFile.cpp  Path.cpp  URL.cpp  UnixPermissions.cpp
src/FormalLanguages/: AlphabetCreator.hpp  CMakeLists.txt  CharacterClass.hpp  DFA.cpp  DFA.hpp  NFA.hpp  NFACreator.hpp  RegEx.cpp  RegExAST.hpp  RegExLexer.cpp  RegExLexer.hpp  RegExParser.cpp  RegExParser.hpp  Token.hpp
src/Hashing/: CMakeLists.txt  CRC32Hasher.cpp  CRC32Hasher.hpp  ChecksumFunction.cpp  Hasher.cpp
src/MIDI/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  EventScheduler.cpp  EventStreamer.cpp  Factory.cpp  MultiConnectionOutputSequencer.cpp  Program.cpp  ProgramLoader.cpp  ProgramLoader.hpp  SMFEvent.hpp
src/Math/: BinaryFloat.cpp  CMakeLists.txt  DecimalFloat.cpp  Degree.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Natural.cpp  Radian.cpp  RandomNumberGenerator.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Memory/: CMakeLists.txt  DebugMemBlockHeader.hpp  MemoryManager.cpp  MemoryTrackingAllocator.cpp  StaticMemoryBlockAllocator.cpp
src/Multimedia/: AParser.cpp  AbstractAudioBuffer.cpp  AudioBuffer.cpp  AudioFrame.cpp  AudioSampleFormat.cpp  AudioStream.cpp  BlockIndex.cpp  CMakeLists.txt  ClusterIndex.cpp  Codec.cpp  CodingFormat.cpp  CodingFormatIdMap.hpp  ComputePixmapResampler.cpp  ContainerFormat.cpp  Decoder.cpp  DecoderContext.cpp  Demuxer.cpp  Encoder.cpp  Format.cpp  FormatRegistry.cpp  FourCC.h  ID3.cpp  ID3.hpp  Image.cpp  Index.cpp  MediaObject.cpp  MediaPlayer.cpp  MediaPlayer_DecoderThread.cpp  MediaPlayer_DemuxerThread.cpp  Packet.cpp  PacketWrapper.cpp  Parser.cpp  ParserContext.cpp  PixelFormat.cpp  Pixmap.cpp  RGBPixmapView.cpp  Stream.cpp  SubtitleStream.cpp  VideoFrame.cpp  VideoStream.cpp  (+1 more)
src/Multitasking/: StaticThreadPool.cpp  Thread.cpp
src/Network/: CMakeLists.txt  Datagram.cpp  DatagramSocket.cpp  HTTPHeaders.cpp  HTTPResponse.cpp  HTTPServer.cpp  IPv4Address.cpp  IPv4Range.cpp  NetAddress.cpp  Shared.cpp  Shared.hpp  TCPServerSocket.cpp  TCPSocket.cpp  TCPSocketInputStream.cpp  TCPSocketInputStream.hpp  TCPSocketOutputStream.cpp  TCPSocketOutputStream.hpp
src/Rendering/: CCubeMap.cpp  CCubeMap.h  CDeviceContext.cpp  CFrameBuffer.cpp  CFrameBuffer.h  CIndexBuffer.cpp  CIndexBuffer.h  CInputState.cpp  CInputState.h  CShader.cpp  CShader.h  CShaderProgram.cpp  CShaderProgram.h  CTexture2D.cpp  CTexture2D.h  CVertexBuffer.cpp  OpenGL.h  (+15 more)
src_backends/: CMakeLists.txt  FindFFmpeg.cmake  RegisterBackends.cpp  RegisterExtensions.cpp
tests/: CMakeLists.txt  DecimalToString.cpp  FloatToString.cpp  aes.cpp  example.cpp  lzma.cpp
(+2420 files in other folders)
