add_subdirectory(Std++)

set(SOURCE_FILES
	${SOURCE_FILES}

	#.
	${CMAKE_CURRENT_SOURCE_DIR}/StdXX.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXCommandLine.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXCore.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXEventHandling.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXMath.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXMultimedia.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXStreams.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/StdXXTest.hpp

	PARENT_SCOPE)